[gd_scene load_steps=14 format=3 uid="uid://c7wlto2f3rbp1"]

[ext_resource type="Script" uid="uid://60iw47fjvar7" path="res://Scenes/Minigame2/scripts/hero.gd" id="1_3a4aj"]
[ext_resource type="Texture2D" uid="uid://brj65uxtm01xu" path="res://Scenes/Minigame2/Free assets/Player/Mini shovel_.png" id="3_fvcx0"]
[ext_resource type="Texture2D" uid="uid://2l8fk40v3ibp" path="res://Scenes/Minigame2/Free assets/Player/Stand 2.png" id="3_ub320"]
[ext_resource type="Texture2D" uid="uid://thpju5pn5d10" path="res://Scenes/Minigame2/Free assets/Player/Crouch.png" id="4_qkgar"]
[ext_resource type="AudioStream" uid="uid://cinxufi87r5ya" path="res://Scenes/Minigame2/Sounds/dig_sound.wav" id="4_rhc5p"]
[ext_resource type="AudioStream" uid="uid://d18yvcya3hkle" path="res://Scenes/Minigame2/Sounds/plant_sound.wav" id="5_kjrfn"]
[ext_resource type="AudioStream" uid="uid://bvjx1eydyulbk" path="res://Scenes/Minigame2/Sounds/jump_sound.mp3" id="6_2npto"]
[ext_resource type="Texture2D" uid="uid://b5ps3jqxck3pf" path="res://Scenes/Minigame2/Free assets/Player/Jump.png" id="6_6eq7b"]
[ext_resource type="Texture2D" uid="uid://26uw2v5w5ssa" path="res://Scenes/Minigame2/Free assets/Player/Seed.png" id="7_6wqqw"]
[ext_resource type="Texture2D" uid="uid://bpuc84dfx116y" path="res://Scenes/Minigame2/Free assets/Player/Walk 1.png" id="8_fwrl0"]
[ext_resource type="Texture2D" uid="uid://dpo06r1tdqxcu" path="res://Scenes/Minigame2/Free assets/Player/Walk 2.png" id="9_4a17q"]

[sub_resource type="SpriteFrames" id="SpriteFrames_nqwae"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_qkgar")
}, {
"duration": 1.0,
"texture": ExtResource("4_qkgar")
}, {
"duration": 1.0,
"texture": ExtResource("3_fvcx0")
}, {
"duration": 1.0,
"texture": ExtResource("3_fvcx0")
}],
"loop": false,
"name": &"dig",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ub320")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_6eq7b")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_qkgar")
}, {
"duration": 1.0,
"texture": ExtResource("4_qkgar")
}, {
"duration": 1.0,
"texture": ExtResource("7_6wqqw")
}, {
"duration": 1.0,
"texture": ExtResource("7_6wqqw")
}],
"loop": false,
"name": &"plant",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_fwrl0")
}, {
"duration": 1.0,
"texture": ExtResource("3_fvcx0")
}, {
"duration": 1.0,
"texture": ExtResource("9_4a17q")
}, {
"duration": 1.0,
"texture": ExtResource("7_6wqqw")
}, {
"duration": 1.0,
"texture": ExtResource("8_fwrl0")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ctwog"]
radius = 6.40312

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_3a4aj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -19.1406)
scale = Vector2(0.266052, 0.260758)
sprite_frames = SubResource("SpriteFrames_nqwae")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_ctwog")

[node name="digSpawnPoint" type="Marker2D" parent="."]
position = Vector2(0, 1)

[node name="dig_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_rhc5p")
bus = &"SFX"

[node name="plant_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_kjrfn")
bus = &"SFX"

[node name="jump_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_2npto")
bus = &"SFX"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
